@@ -17,6 +17,11 @@ Release 2.0 - ???
 
 Release 1.15 -???
 
+  * Change default behavior to parse embedded documents even if the user
+    forgets to specify a Parser.class in the ParseContext (TIKA-2096).
+    Users who wish to parse only the container document should set
+    an EmptyParser as the Parser.class in the ParseContext.
+
   * Add mime detection and parser for Word 2006ML format (TIKA-2179).
 
   * Upgrade to POI 3.16-beta1 (TIKA-2116).
